k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: issuebell
  labels:
    app.kubernetes.io/name: issuebell
