k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuebell
  namespace: issuebell
  labels:
    app: issuebell
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: issuebell
  template:
    metadata:
      labels:
        app: issuebell
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: issuebell
          image: ghcr.io/back1ash/issuebell@sha256:f595463a2bfad111a7184bd51bff7dae29808f019a9be06d78987ca21db86ea1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
